[package]
name = "rlog"
version = "1.2.0"
edition = "2021"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
actix-files = "0.6.6"
actix-web = "4"
env_logger = "0.11.5"
ignore = "0.4.22"
lazy_static = "1.5.0"
pulldown-cmark = { version = "0.11.0", default-features = false, features=["html"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
tera = "1"
toml = "0.8.19"
